--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2.0",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "fenos/notifynder": "4.0.0-beta.5",
+        "doctrine/dbal": "^2.5"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
