--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "laravelcollective/html": "^5.2.0",
         "zizaco/entrust": "5.2.x-dev",
         "fenos/notifynder": "4.0.0-beta.5",
-        "doctrine/dbal": "^2.5"
-
+        "doctrine/dbal": "^2.5",
+        "barryvdh/laravel-dompdf": "^0.7.0",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
